# AI-HEXAGON

./: .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
.github/workflows/: nextjs.yml
ai_hexagon/: __init__.py  cli.py  model.py  test.py  test_suite.py
ai_hexagon/modules/: attention.py  grouped_query_attention.py  mlp.py  rope.py  sin_embedding.py  swiglu.py  time_embeding.py
ai_hexagon/tests/: __init__.py  hash_map.py  state_tracking.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/utils/: fetchData.ts  types.ts
frontend/components/: LeaderBoardPage.tsx  ModelAnalysisCharts.tsx  ModelCard.tsx  ModelCards.tsx  PlotSection.tsx
frontend/components/pages/: home.tsx
results/: suite.json
results/mdconv/: model.py  model.result.json
results/mdconv/modules/: md_conv.py
results/transformer/: model.py  model.result.json
