[tool.poetry]
name = "ai-hexagon"
version = "0.1.0"
description = ""
authors = ["Jiri Klimes <jiriklimes920@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
ai-hex = "ai_hexagon.cli:cli"

[tool.poetry.dependencies]
python = "^3.12"
inflection = "^0.5.1"
jax = { extras = ["cuda12"], version = "^0.4.34" }
flax = "^0.9.0"
optax = "^0.2.3"
pydantic = "^2.9.2"
click = "^8.1.7"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
